manifests/powersync.yaml
apiVersion: v1
kind: Service
metadata:
  name: powersync
  namespace: powersync
  labels:
    app: powersync
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: powersync
  type: ClusterIP


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: powersync
  namespace: powersync
  labels:
    app: powersync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powersync
  template:
    metadata:
      labels:
        app: powersync
    spec:
      containers:
      - name: powersync
        image: journeyapps/powersync-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /app/powersync.yaml
          subPath: powersync.yaml
        - name: sync-rules-volume
          mountPath: /app/sync_rules.yaml
          subPath: sync_rules.yaml
      volumes:
      - name: config-volume
        configMap:
          name: powersync-config
      - name: sync-rules-volume
        configMap:
          name: powersync-sync-rules


---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powersync-ingress
  namespace: powersync
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: powersync.ydeyeq.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: powersync
            port:
              number: 80
